crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__switch_case_constant_label_items_are_structured.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class SwitchCaseConstants {
  static final int NAME = 3;

  void method(int value) {
    switch (value) {
      case 1, -2, NAME -> value++;
    }
  }
}

diagnostics:
(none)
