crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__switch_case_pattern_label_items_are_structured_with_guards.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class SwitchCasePatternGuard {
  void method(Object value) {
    switch (value) {
      case String s when s.isEmpty() -> s.trim();
      case String s when s.isBlank() -> s.trim();
    }
  }
}

diagnostics:
(none)
