crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__trailing_method_and_annotation_element_dims_have_per_dimension_nodes.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
abstract class TrailingMethodPerDimensionDims {
  abstract int values() @A [] @B [];
}

@interface TrailingAnnotationElementPerDimensionDims {
  int values() @A [] @B [];
}

@interface A {
}

@interface B {
}

diagnostics:
(none)
