crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__try_with_resources_has_resource_specification_boundary.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class ResourceSpecificationShape {
  void method() throws Exception {
    try (
      var declared = open();
      existing
    ) {
    }
  }

  AutoCloseable open() {
    return null;
  }

  AutoCloseable existing;
}

diagnostics:
(none)
