crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__type_bounds_and_casts_have_intersection_type_nodes.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
interface A {
}

interface B {
}

class IntersectionTypeShapes<T extends A & B> {
  Object method(Object value) {
    return (A & B) value;
  }
}

diagnostics:
(none)
