crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__type_on_demand_import_declarations_expose_package_prefix_names.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
import java.util.*;

class OnDemandImport {
}

diagnostics:
(none)
