crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__void_method_results_and_class_literals_have_void_type_nodes.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class VoidTypeShapes {
  void method() {
    Object literal = void.class;
  }
}

diagnostics:
(none)
